--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@fullcalendar/daygrid": "^4.1.0",
     "@fullcalendar/react": "^4.1.0",
     "@svgr/webpack": "2.4.1",
-    "axios": "^0.18.0",
+    "axios": "^0.19.0",
     "axios-oauth-client": "^1.1.1",
     "axios-token-interceptor": "^0.1.0",
     "babel-core": "7.0.0-bridge.0",
@@ -82,6 +82,7 @@
     "react-progress-button": "^5.1.0",
     "react-progressive-image-loading": "^3.0.3",
     "react-redux": "^6.0.0",
+    "react-redux-datatable": "^2.4.5",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scroll-lock-component": "^1.2.0",
@@ -98,6 +99,7 @@
     "sass-loader": "7.1.0",
     "serviceworker-webpack-plugin": "^1.0.1",
     "style-loader": "0.23.0",
+    "sweetalert2": "^8.13.0",
     "terser-webpack-plugin": "1.1.0",
     "url-loader": "1.1.1",
     "webpack": "4.19.1",
